<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:scrollbars="none"
    tools:context=".global.dashboard.fragments.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/profileUpperBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:layout_marginBottom="@dimen/_14sdp"
            android:elevation="@dimen/_2sdp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profileIv"
                android:layout_width="@dimen/_108sdp"
                android:layout_height="@dimen/_108sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_12sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_icon"
                app:shapeAppearance="@style/styleCircleImage" />

            <RelativeLayout
                android:id="@+id/codrTokenLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_38sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:background="@drawable/codr_token_background"
                android:padding="@dimen/_6sdp">

                <ImageView
                    android:id="@+id/codrTokenIcon"
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:src="@drawable/codr_airdrop_token_icon" />

                <TextView
                    android:id="@+id/codrTokenTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_toEndOf="@id/codrTokenIcon"
                    android:fontFamily="@font/arcade_gamer"
                    android:text="@string/codr_token_value"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/verifiedLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/profileIv"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/_58sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:background="@drawable/verified_background"
                android:padding="@dimen/_6sdp">

                <TextView
                    android:id="@+id/verifiedTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:fontFamily="@font/arcade_gamer"
                    android:text="@string/verified"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_6ssp" />

                <ImageView
                    android:id="@+id/verifiedIv"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_toEndOf="@id/verifiedTv"
                    android:scaleType="center"
                    android:src="@drawable/profile_verified_icon"
                    app:tint="@color/primaryColor" />

            </RelativeLayout>

            <TextView
                android:id="@+id/usernameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profileIv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/lato_semibold"
                android:text="@string/username"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp" />

            <TextView
                android:id="@+id/bioTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/usernameTv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/lato_medium"
                android:text="@string/bio"
                android:textColor="@color/secondaryButtonTextColor"
                android:textSize="@dimen/_12ssp" />

            <RelativeLayout
                android:id="@+id/connectWalletDetailsLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/bioTv"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp">

                <TextView
                    android:id="@+id/walletIdTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/neue_machina_ultrabold"
                    android:text="@string/wallet_id"
                    android:textAlignment="center"
                    android:textColor="#80FFFFFF"
                    android:textSize="@dimen/_10ssp" />

                <!--                <ImageView-->
                <!--                    android:id="@+id/copyBtn"-->
                <!--                    android:layout_toEndOf="@id/walletIdTv"-->
                <!--                    android:layout_width="@dimen/_18sdp"-->
                <!--                    android:layout_centerInParent="true"-->
                <!--                    android:layout_marginStart="@dimen/_4sdp"-->
                <!--                    android:layout_height="@dimen/_14sdp"-->
                <!--                    android:src="@drawable/copy_icon" />-->

            </RelativeLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/profileButtonsAndContents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profileUpperBody"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/editProfileBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:background="@drawable/profile_button"
                android:backgroundTint="@color/primaryColor"
                android:padding="@dimen/_12sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_18sdp"
                    android:fontFamily="@font/lato_bold"
                    android:gravity="center_vertical"
                    android:text="@string/edit_profile"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    app:drawableEndCompat="@drawable/profile_next_icon"
                    app:drawableStartCompat="@drawable/profile_edit_profile_icon"
                    app:drawableTint="@color/white" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/walletConnectBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:background="@drawable/profile_button"
                android:backgroundTint="@color/primaryColor"
                android:padding="@dimen/_12sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_18sdp"
                    android:fontFamily="@font/lato_bold"
                    android:gravity="center_vertical"
                    android:text="@string/connect_wallet"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    app:drawableEndCompat="@drawable/profile_next_icon"
                    app:drawableStartCompat="@drawable/profile_wallet_icon"
                    app:drawableTint="@color/white" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/getVerifiedBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:background="@drawable/profile_button"
                android:backgroundTint="@color/primaryColor"
                android:padding="@dimen/_12sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_18sdp"
                    android:fontFamily="@font/lato_bold"
                    android:gravity="center_vertical"
                    android:text="@string/get_verified"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    app:drawableEndCompat="@drawable/profile_next_icon"
                    app:drawableStartCompat="@drawable/profile_verified_icon"
                    app:drawableTint="@color/white" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/privacyPolicyBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:background="@drawable/profile_button"
                android:backgroundTint="@color/primaryColor"
                android:padding="@dimen/_12sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_18sdp"
                    android:fontFamily="@font/lato_bold"
                    android:gravity="center_vertical"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    app:drawableEndCompat="@drawable/profile_next_icon"
                    app:drawableStartCompat="@drawable/profile_privacy_policy_icon"
                    app:drawableTint="@color/white" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/logoutBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:background="@drawable/profile_button"
                android:backgroundTint="@color/primaryColor"
                android:padding="@dimen/_12sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_18sdp"
                    android:fontFamily="@font/lato_bold"
                    android:gravity="center_vertical"
                    android:text="@string/logout"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    app:drawableEndCompat="@drawable/profile_next_icon"
                    app:drawableStartCompat="@drawable/profile_logout_icon"
                    app:drawableTint="@color/white" />

            </RelativeLayout>

            <TextView
                android:id="@+id/versionCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:drawablePadding="@dimen/_18sdp"
                android:fontFamily="@font/lato_bold"
                android:gravity="center"
                android:text="@string/version_code"
                android:textColor="@color/secondaryButtonTextColor"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:id="@+id/teamLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:drawablePadding="@dimen/_18sdp"
                android:fontFamily="@font/lato_bold"
                android:gravity="center"
                android:text="@string/teamLabel"
                android:textColor="@color/secondaryButtonTextColor"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>